[package]
name = "libp2p-ping-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.28"
libp2p = { version = "0.52.3", features = ["tcp", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros"] }
